decrease global tile padding to fix issue caused by line-spacing change. remove card links on home page

--- a/css/global.scss
+++ b/css/global.scss
@@ -114,7 +114,7 @@ div.visible-xs {
     align-items: center;
     justify-content: center;
     align-items: flex-start;
-    padding: 6em;
+    padding: 5em;
   }
 
   h3 {
